--- a/app/views/students/show.html.erb
+++ b/app/views/students/show.html.erb
@@ -1,8 +1,8 @@
 <h1>Student:</h1>
-<p>Name: <%= @student["full_name"] %></p>
-<p>Birthdate: <%= @student["birthdate"] %></p>
-<p>University: <%= @student["university"] %></p>
-<p>Pokemon: <%= @student["pokemon"] %></p>
-<p>Email: <%= @student["email"] %></p>
+<p>Name: <%= @student.first_name %></p>
+<p>Birthdate: <%= @student.birthdate %></p>
+<p>University: <%= @student.university %></p>
+<p>Pokemon: <%= @student.pokemon %></p>
+<p>Email: <%= @student.email %></p>
 
-<%= link_to "Delete Student", "/students/#{params["id"]}", method: :delete, class: "btn btn-danger" %>
+<%= link_to "Delete Student", "/students/#{@student.id}", method: :delete, class: "btn btn-danger" %>
