--- a/app/views/students/show.html.erb
+++ b/app/views/students/show.html.erb
@@ -1,5 +1,5 @@
 <h1>Student:</h1>
-<p>Name: <%= @student.first_name %></p>
+<p>Name: <%= @student.full_name %></p>
 <p>Birthdate: <%= @student.birthdate %></p>
 <p>University: <%= @student.university %></p>
 <p>Pokemon: <%= @student.pokemon %></p>
